kubernetes/apollo/apps/flux-system/webhooks/app/httproute.yaml
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-webhook
spec:
  hostnames:
    - flux-webhook-apollo.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook
          method: POST
      backendRefs:
        - name: webhook-receiver
          port: 80
